--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,10 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
     
-
+     <!-- link to the SqPaymentForm library -->
+     <!-- <script type="text/javascript" src="https://js.squareup.com/v2/paymentform">
+     </script> -->
+ 
     <title>EZ Valet</title>
 
   </head>
@@ -35,6 +38,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
+    <script src="https://checkout.stripe.com/checkout.js"></script>
   </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
